Added appbar in HomePage

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   velocity_x: ^3.4.0
   google_fonts: ^2.3.1
+  line_awesome_flutter: ^2.0.0
 
 dev_dependencies:
   flutter_test:
